[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ColorSquareNode.gd" type="Script" id=1]
[ext_resource path="res://assets/images/colorSquares.png" type="Texture" id=2]

[node name="ColorSquare" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 119.0
margin_bottom = 118.0

[node name="square" type="Sprite" parent="Button"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.473077, 0.473077 )
texture = ExtResource( 2 )
centered = false
hframes = 2
frame = 1
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
